<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016. Dibuat oleh JalalKun
  ~ LEGG
  -->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.eeg.jalalkun.seeyourself.MainActivity">

    <include
        android:id="@+id/maintoolbar"
        layout="@layout/main_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#03A9F4"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:text="@string/quot"
            android:textColor="#727272" />


    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="24dp"
                android:text="@string/peraturan"
                android:textSize="20sp" />

            <Button
                android:layout_marginBottom="8dp"
                android:id="@+id/mulai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/btn_mulai" />


        </LinearLayout>


    </ScrollView>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/jperingatan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judulperingatan"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/yakinkeluar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peringatan"
            android:visibility="invisible" />

    </RelativeLayout>

</LinearLayout>
