<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016. Dibuat oleh JalalKun
  ~ LEGG
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.eeg.jalalkun.seeyourself.SoalKeempat">

        <LinearLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            >

            <TextView
                android:textColor="@color/putih"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="10dp"
                android:text="4"
                android:textSize="18sp"
                />
            <TextView
                android:textColor="@color/putih"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soal4"
                android:textSize="18sp"
                android:layout_margin="10dp"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

        <RadioGroup
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio4"
            >
            <RadioButton
                android:checked="true"
                android:id="@+id/radioJ1no4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jawab1no4"
                />
            <RadioButton
                android:id="@+id/radioJ2no4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jawab2no4"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioJ3no4"
                android:text="@string/jawab3no4"
                />
        </RadioGroup>

        <Button
            android:layout_margin="16dp"
            android:background="@drawable/btn_selanjutnya"
            android:id="@+id/selanjutnya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right" />

    </LinearLayout>

</ScrollView>