<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016. Dibuat oleh JalalKun
  ~ LEGG
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/putih">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.eeg.jalalkun.seeyourself.SoalPertama">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="10dp"
                android:text="1"
                android:textColor="@color/putih"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/soal1"
                android:textColor="@color/putih"
                android:textSize="18sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <RadioGroup
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="18dp">

            <RadioButton
                android:id="@+id/radioJ1no1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/jawab1no1" />

            <RadioButton
                android:id="@+id/radioJ2no1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jawab2no1" />
        </RadioGroup>

        <Button
            android:id="@+id/selanjutnya1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            android:background="@drawable/btn_selanjutnya" />

    </LinearLayout>

</ScrollView>